--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@soroban-react/xbull": "9.3.0",
     "@stellar/freighter-api": "1.7.1",
     "@stellar/stellar-sdk": "^13.1.0",
+    "@tailwindcss/postcss": "^4.0.3",
     "@tanstack/react-query": "^5.59.13",
     "@types/qs": "^6.9.7",
     "@types/react": "18.2.33",
@@ -59,6 +60,7 @@
     "next": "^14.2.13",
     "npm": "^10.2.5",
     "passkey-kit": "^0.5.3",
+    "postcss": "8.4.49",
     "qs": "^6.11.2",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
@@ -74,6 +76,7 @@
     "redux": "^4.2.1",
     "soroswap-router-sdk": "^1.4.6",
     "swr": "^2.2.0",
+    "tailwindcss": "3.4.17",
     "ts-loader": "^9.5.1",
     "typescript": "5.3.3",
     "zustand": "^4.5.4"
@@ -89,6 +92,7 @@
     "@types/node": "^18.11.15",
     "@types/react-copy-to-clipboard": "^5.0.7",
     "@vitejs/plugin-react": "^4.2.0",
+    "autoprefixer": "^10.4.20",
     "cypress": "12.12.0",
     "jsdom": "^23.0.0",
     "msw": "^2.0.9",
