--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "dotenv-flow": "^4.1.0",
     "eslint": "8.56.0",
     "eslint-config-next": "^14.2.3",
+    "framer-motion": "^12.4.0",
     "lodash-es": "^4.17.21",
     "next": "^14.2.13",
     "npm": "^10.2.5",
