added funtions in dashaboard page: total balance, supplied and borrowed positions

--- a/.env
+++ b/.env
@@ -12,3 +12,6 @@ NEXT_PUBLIC_POOL=CC7OVK4NABUX52HD7ZBO7PQDZEAUJOH55G6V7OD6Q7LB6HNVPN7JYIEU
 NEXT_PUBLIC_COLLATERAL_ASSET=CBZFW4ICZQY6WUKDI2EFRGKICT36QTLHZGS7BZTGJQ7RHCA2OTLO2PNM
 NEXT_PUBLIC_STABLECOIN_ASSET=CDJMJFAYTGWQXH27SBU6HJKBZ2YKFKQWOKY43LDQWRBH3HTVELG4LISO
 NEXT_PUBLIC_ROUTER_ID=CC6WRJYMZA574TOXNO2ZWU4HIXJ5OLKGB7JF556RKMZPSV2V62SLBTPK
+
+NEXT_PUBLIC_USDC_ISSUER=GATALTGTWIOT6BUDBCZM3Q4OQ4BO2COLOAZ7IYSKPLC2PMSOPPGF5V56
+NEXT_PUBLIC_BLND_ISSUER=GATALTGTWIOT6BUDBCZM3Q4OQ4BO2COLOAZ7IYSKPLC2PMSOPPGF5V56
