--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ NEXT_PUBLIC_TRUSTLINE_WALLET_PUBLIC_KEY= STELLAR_PUBLIC_KEY// The public key of 
 NEXT_PUBLIC_TEST_TOKENS_ADMIN_SECRET_KEY= STELLAR_SECRET_KEY // The secret key of the test tokens admin
 
 NEXT_PUBLIC_BACKSTOP=CCWSNUZAIKPGWQ7KIGVFJUNCFC4JP4AOP4FJCWB4OZ3QC6CGWFRFKG5J
+NEXT_PUBLIC_BACKSTOP_V2=CANQKUZ6P4AVTLMVXWPGPIBE2J2VK6LFIELAP2HULGB2XU5HBGYCM5WL
 NEXT_PUBLIC_POOL=CC7OVK4NABUX52HD7ZBO7PQDZEAUJOH55G6V7OD6Q7LB6HNVPN7JYIEU
 NEXT_PUBLIC_COLLATERAL_ASSET=CBZFW4ICZQY6WUKDI2EFRGKICT36QTLHZGS7BZTGJQ7RHCA2OTLO2PNM
 NEXT_PUBLIC_STABLECOIN_ASSET=CDJMJFAYTGWQXH27SBU6HJKBZ2YKFKQWOKY43LDQWRBH3HTVELG4LISO
