--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@blend-capital/blend-sdk": "2.2.0",
+    "@blend-capital/blend-sdk": "3.0.0-beta.3",
     "@capacitor/core": "^6.1.1",
     "@capacitor/share": "^6.0.1",
     "@creit.tech/stellar-wallets-kit": "^1.3.0",
@@ -38,8 +38,8 @@
     "@soroban-react/utils": "9.1.13",
     "@soroban-react/wallet-data": "9.3.0",
     "@soroban-react/xbull": "9.3.0",
-    "@stellar/freighter-api": "1.7.1",
-    "@stellar/stellar-sdk": "^13.1.0",
+    "@stellar/freighter-api": "3.0.0",
+    "@stellar/stellar-sdk": "13.1.0",
     "@tailwindcss/postcss": "^4.0.3",
     "@tanstack/react-query": "^5.59.13",
     "@types/qs": "^6.9.7",
