--- a/package.json
+++ b/package.json
@@ -20,11 +20,9 @@
     "@emotion/styled": "^11.9.3",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
-    "@next/font": "^14.2.13",
     "@nightlylabs/wallet-selector-polkadot": "0.2.4",
     "@polkadot/api-contract": "^10.12.6",
     "@polkadot/types": "^10.12.6",
-    "@reduxjs/toolkit": "^2.2.1",
     "@simplewebauthn/browser": "^10.0.0",
     "@soroban-react/chains": "9.1.13",
     "@soroban-react/connect-button": "9.1.13",
@@ -47,7 +45,6 @@
     "@types/react-dom": "18.2.14",
     "@types/react-window": "^1.8.5",
     "@vercel/analytics": "^1.2.2",
-    "axios": "^1.6.2",
     "base64url": "^3.0.1",
     "bigint-conversion": "^2.4.3",
     "bignumber.js": "^9.1.0",
@@ -72,9 +69,7 @@
     "react-router-dom": "^6.21.1",
     "react-spring": "^9.5.5",
     "react-virtualized-auto-sizer": "^1.0.20",
-    "react-window": "^1.8.9",
-    "recharts": "^2.12.7",
-    "redux": "^4.2.1",
+    "sharp": "^0.33.5",
     "soroswap-router-sdk": "^1.4.6",
     "swr": "^2.2.0",
     "tailwindcss": "3.4.17",
