--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "blend-ui",
-  "version": "1.0.1",
+  "name": "orbit-ui",
+  "version": "2.0.0",
   "private": true,
   "type": "module",
   "packageManager": "yarn@1.22.22",
@@ -18,7 +18,6 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^5.8.4",
     "@mui/material": "^5.8.6",
-    "@stellar/freighter-api": "3.0.0",
     "@stellar/stellar-sdk": "13.1.0",
     "@tailwindcss/postcss": "^4.0.3",
     "@tanstack/react-query": "^5.59.13",
